# Simulador-LACIQ

./: .gitignore  .gitmodules  CMakeLists.txt  NUCLEO_IMPLEMENTADO.md  README_BIBLIOTECAS.md  teste_simples  teste_simples.cpp
include/core/: QuantumCircuit.hpp  QuantumGate.hpp  Simulator.hpp
src/: main.cpp
src/core/: QuantumCircuit.cpp  QuantumGate.cpp  Simulator.cpp
